...
    var showSearchView: some View {
            VStack(spacing: 16) {
                if searchText.isEmpty {
                    showErrorView(str: "Search String is Empty")
                }
                HStack {
                    TextField("Enter City/State Code/Country", text: $searchText)
                        .textFieldStyle(.roundedBorder)
                        .cornerRadius(10)
                        .border(Color.gray.opacity(0.3), width: 1)
                    Button("Search") {
                        Task {
                            await vm.searchGeo(searchString: searchText)
                        }
                    }
                }
            }
...
