...
        os_signpost(.begin, log: poiLog, name: "Testing ")
        Task { @MainActor in
            let granted = await locationService.requestPermission()
            if granted {
                do {
                    let (lat, lon) = try await locationService.getCurrentCoordination()
                    let response = GeoResponse(id: UUID(), name: "Current Location", lat: lat, lon: lon, country: "US", state: "")
                    geoResponses.insert(response, at: 0)
                    self.state = .success
                } catch {
                    print("Error getting location: \(error)")
                }
            } else {
...
