...
                
                VStack {
                    Button {
                        modelContext.insert(person)
                        isNewPerson = false
                    } label: {
                        Text("Done")
                    }
                    .buttonStyle(.bordered)
                    .disabled(person.firstname.isEmpty && person.lastName.isEmpty)
                }
            }
        }
...
